# syntek-rust-security

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODING-PRINCIPLES.md  CONTRIBUTING.md  DEVELOPMENT.md  IMPLEMENTATION-STATUS.md  LICENSE  README.md  RELEASES.md  SECURITY.md  TESTING.md  VERSION-HISTORY.md  config.json  plugin.json
.claude-plugin/: README.md  manifest.json  marketplace.json  plugin.json
agents/: ai-gateway-setup.md  benchmark.md  binary-check.md  cert-rotate.md  design-api.md  docker-harden.md  dpi-setup.md  encrypt-setup.md  gateway-security-init.md  gdpr-check.md  generate-docs.md  git-workflow.md  gunicorn-config.md  homeserver-security-init.md  malware-scanner-setup.md  minimize-unsafe.md  nas-security-init.md  pentest-tools.md  redis-config.md  review-code.md  router-security-init.md  scaffold.md  ssh-wrapper.md  supply-chain-audit.md  systemd-harden.md  threat-feeds-setup.md  vault-setup.md  vuln-scan.md  write-support-article.md  write-tests.md
commands/: README.md  ai-gateway-setup.md  ai-provider-add.md  backup-setup.md  benchmark.md  binary-check.md  cert-rotate.md  cloudflare-setup.md  compliance-report.md  crypto-review.md  decrypt-setup.md  design-api.md  dns-proxy-setup.md  docker-harden.md  dpi-setup.md  encrypt-setup.md  ffi-audit.md  firewall-setup.md  fuzz-setup.md  gateway-security-init.md  gdpr-check.md  generate-docs.md  git-workflow.md  gunicorn-config.md  homeserver-security-init.md  init.md  (+28 more)
plugins/: Cargo.toml  README.md
plugins/src/: audit_tool.rs  cargo_tool.rs  compliance_tool.rs  fuzzer_tool.rs  rustc_tool.rs  vuln_db_tool.rs
(+314 files in other folders)
