[package]
name = "syntek-rust-security-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.92.0"
authors = ["Syntek Studio"]
license = "MIT"
description = "Plugin tools for syntek-rust-security Claude Code plugin"
repository = "https://github.com/Syntek-Studio/syntek-rust-security"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = "1.0"
cargo_metadata = "0.18"
rustsec = "0.29"
walkdir = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "cargo-tool"
path = "src/cargo_tool.rs"

[[bin]]
name = "rustc-tool"
path = "src/rustc_tool.rs"

[[bin]]
name = "vuln-db-tool"
path = "src/vuln_db_tool.rs"

[[bin]]
name = "audit-tool"
path = "src/audit_tool.rs"

[[bin]]
name = "fuzzer-tool"
path = "src/fuzzer_tool.rs"

[[bin]]
name = "compliance-tool"
path = "src/compliance_tool.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
